optimization and AI development page added

--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -3,8 +3,8 @@ title: "5 Easy Ways a Mobile App Can Grow Your Business"
 date: "2024-06-19"
 author: "Trimsel"
 excerpt: "Discover how a mobile app can help your business stand out, win customer loyalty, and drive more sales—even if you're not tech-savvy."
-coverImage: "/images/mobile-app-growth.png"
-thumbnailUrl: "/images/mobile-app-growth.png"
+coverImage: "/images/mobile-app-growth.webp"
+thumbnailUrl: "/images/mobile-app-growth.webp"
 tags: ["Mobile App", "Business Growth"]
 ---
 
