--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -187,6 +187,6 @@ At **Trimsel**, we specialize in crafting user-friendly, scalable mobile apps fo
 **Looking for a [trusted mobile app development company in Chennai](https://www.trimsel.com/mobile-app-development-chennai)?**  
 Let Trimsel be your technology partner and turn your ideas into powerful mobile experiences.
 
-👉 [Contact us today for a free consultation and get your business in their pocket—where it belongs.](https://www.trimsel.com/contact-us)
+👉 [Contact us today for a consultation and get your business in their pocket—where it belongs.](https://www.trimsel.com/contact-us)
 
 ---
