feat(blog): integrate decap cms with github oauth

--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -1,11 +1,53 @@
 ---
-title: "5 Easy Ways a Mobile App Can Grow Your Business"
-date: "2024-06-19"
-author: "Trimsel"
-excerpt: "Discover how a mobile app can help your business stand out, win customer loyalty, and drive more sales—even if you're not tech-savvy."
-coverImage: "/images/mobile-app-growth.webp"
-thumbnailUrl: "/images/mobile-app-growth.webp"
-tags: ["Mobile App", "Business Growth"]
+title: 5 Easy Ways a Mobile App Can Grow Your Business
+date: 2025-10-23
+author: Trimsel
+excerpt: Discover how a mobile app can help your business stand out, win
+  customer loyalty, and drive more sales—even if you're not tech-savvy.
+coverImage: /images/mobile-app-growth.webp
+thumbnailUrl: /images/mobile-app-growth.webp
+tags:
+  - Mobile App
+  - Business growth
+seo:
+  metaTitle: 5 Easy Ways a Mobile App Can Grow Your Business | Trimsel
+  metaDescription: Learn five practical strategies to use mobile apps for customer
+    loyalty, sales growth, and stronger brand presence. Templates sized for SMBs
+    and startups.
+  canonicalUrl: https://www.trimsel.com/blog/how-mobile-apps-grow-business
+  ogImage: /images/mobile-app-growth.webp
+  jsonLd: |
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Blog",
+          "item": "https://www.trimsel.com/blog"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "5 Easy Ways a Mobile App Can Grow Your Business",
+          "item": "https://www.trimsel.com/blog/how-mobile-apps-grow-business"
+        }
+      ]
+    }
+  faq:
+    - question: How can a mobile app improve customer loyalty?
+      answer: A mobile app lets you run loyalty programs, deliver personalised offers,
+        and keep your brand on a customer’s home screen—making it easier to
+        retain users and increase repeat purchases.
+    - question: Are mobile apps only useful for large companies?
+      answer: No. Even local businesses can benefit from push notifications, digital
+        ordering, and mobile loyalty programs that help them compete with bigger
+        brands.
+    - question: What metrics should I watch after launching a mobile app?
+      answer: Track total downloads, active users, retention rates, and conversion
+        metrics such as orders, bookings, or support requests that happen inside
+        the app.
 ---
 
 Every day, you fight to be seen. You pour your heart into your business—late nights, tight budgets, big dreams—and still, customers scroll right past. The competition is loud, attention spans are shrinking, and you’re stuck wondering: **How do I make them notice me?**
