Update Blog Post “how-mobile-apps-grow-business”

--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -1,7 +1,7 @@
 ---
 title: 5 Easy Ways a Mobile App Can Grow Your Business
 date: 2025-10-23
-author: Trimsel
+author: Balaji Kailasasundaram
 excerpt: Discover how a mobile app can help your business stand out, win
   customer loyalty, and drive more sales—even if you're not tech-savvy.
 coverImage: /images/mobile-app-growth.webp
@@ -48,6 +48,7 @@ seo:
       answer: Track total downloads, active users, retention rates, and conversion
         metrics such as orders, bookings, or support requests that happen inside
         the app.
+  indexing: false
 ---
 
 Every day, you fight to be seen. You pour your heart into your business—late nights, tight budgets, big dreams—and still, customers scroll right past. The competition is loud, attention spans are shrinking, and you’re stuck wondering: **How do I make them notice me?**
