Update Blog Post “how-mobile-apps-grow-business”

--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -48,7 +48,7 @@ seo:
       answer: Track total downloads, active users, retention rates, and conversion
         metrics such as orders, bookings, or support requests that happen inside
         the app.
-  indexing: false
+  indexing: true
 ---
 Every day, you fight to be seen. You pour your heart into your business—late nights, tight budgets, big dreams—and still, customers scroll right past. The competition is loud, attention spans are shrinking, and you’re stuck wondering: **How do I make them notice me?**
 
