Update Blog Post “top-10-mobile-app-development-company-in-tirunelveli”

--- a/posts/top-10-mobile-app-development-company-in-tirunelveli.mdx
+++ b/posts/top-10-mobile-app-development-company-in-tirunelveli.mdx
@@ -10,7 +10,7 @@ coverImage: /images/blog/banner-image-top-10-mad-in-tirunelveli.png
 thumbnailUrl: /images/blog/banner-image-top-10-mad-in-tirunelveli.png
 seo:
   indexing: true
-  metaTitle: TOP 10 Mobile App development company in Tirunelveli
+  metaTitle: Top 10 Mobile App development company in Tirunelveli
   metaDescription: Check out the list of top 10 Mobile App development company in
     Tirunelveli, Tamil Nadu - India
   canonicalUrl: https://www.trimsel.com/blog/top-mobile-app-development-company-in-tirunelveli
